--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "elisp/smex"]
 	path = elisp/smex
 	url = git://github.com/nonsequitur/smex.git
+[submodule "elisp/smart-tab"]
+	path = elisp/smart-tab
+	url = git@github.com:chrono325/smart-tab.git
