Add git version of anything-config.
It will be easier to push changes and keep it up-to-date this way.

Signed-off-by: Dan Hackney <dan@haxney.org>

--- a/.gitmodules
+++ b/.gitmodules
@@ -10,3 +10,6 @@
 [submodule "elisp/perspective"]
 	path = elisp/perspective
 	url = git://github.com/nex3/perspective-el.git
+[submodule "elisp/anything-config"]
+	path = elisp/anything-config
+	url = ssh://repo.or.cz/srv/git/anything-config.git
