Add different eproject.
Figures out what the project should be from the filename and nearby files
instead of a list. Prevents the annoying addition of files to projects when
browsing random unrelated files.

Signed-off-by: Dan Hackney <dan@haxney.org>

--- a/.gitmodules
+++ b/.gitmodules
@@ -10,3 +10,6 @@
 [submodule "elisp/anything-config"]
 	path = elisp/anything-config
 	url = ssh://repo.or.cz/srv/git/anything-config.git
+[submodule "elisp/eproject"]
+	path = elisp/eproject
+	url = git://github.com/jrockway/eproject.git
