Add org-mode as a submodule.
I thought I already did this... Guess not.

Signed-off-by: Dan Hackney <dan@haxney.org>

--- a/.gitmodules
+++ b/.gitmodules
@@ -16,3 +16,6 @@
 [submodule "elisp/egg"]
 	path = elisp/egg
 	url = git://github.com/bogolisk/egg.git
+[submodule "elisp/org-mode"]
+	path = elisp/org-mode
+	url = git://repo.or.cz/org-mode.git
